//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Example {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  Order Order [not null]
  Cart Cart [not null]
  Wishlist Wishlist [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Product {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  price Int [not null]
  discount Float [not null]
  thumbnail String [not null]
  ProductImages ProductImages [not null]
  ProductCategory ProductCategory [not null]
  OrderItem OrderItem [not null]
  CartItem CartItem [not null]
  Wishlist Wishlist [not null]
}

Table ProductImages {
  id Int [pk, increment]
  image String [not null]
  product_id Product [not null]
  productId Int [not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  image String [not null]
  ProductCategory ProductCategory [not null]
}

Table ProductCategory {
  product Product [not null]
  productId Int [not null]
  category Category [not null]
  categoryId Int [not null]

  indexes {
    (productId, categoryId) [pk]
  }
}

Table Order {
  id Int [pk, increment]
  status String [not null]
  totalPrice Int [not null]
  user User [not null]
  userId String [not null]
  OrderItem OrderItem [not null]
}

Table OrderItem {
  id Int [pk, increment]
  product Product [not null]
  productId Int [not null]
  quantity Int [not null]
  order Order [not null]
  orderId Int [not null]
}

Table Cart {
  id Int [pk, increment]
  user User [not null]
  userId String [not null]
  CartItem CartItem [not null]
}

Table CartItem {
  id Int [pk, increment]
  quantity Int [not null]
  product Product [not null]
  productId Int [not null]
  cart Cart [not null]
  cartId Int [not null]
}

Table Wishlist {
  id Int [pk, increment]
  user User [not null]
  userId String [not null]
  product Product [not null]
  productId Int [not null]
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: ProductImages.productId > Product.id

Ref: ProductCategory.productId > Product.id

Ref: ProductCategory.categoryId > Category.id

Ref: Order.userId > User.id

Ref: OrderItem.productId > Product.id

Ref: OrderItem.orderId > Order.id

Ref: Cart.userId > User.id

Ref: CartItem.productId > Product.id

Ref: CartItem.cartId > Cart.id

Ref: Wishlist.userId > User.id

Ref: Wishlist.productId > Product.id